Add integration tests and FGA schema for functional validation